RESOLVED FIXED200380
Fix compilation of PageConsoleClient with !ENABLE(VIDEO)
https://bugs.webkit.org/show_bug.cgi?id=200380
Summary Fix compilation of PageConsoleClient with !ENABLE(VIDEO)
Konstantin Tokarev
Reported 2019-08-01 20:44:52 PDT
Fix compilation of PageConsoleClient with !ENABLE(VIDEO)
Attachments
Patch (2.02 KB, patch)
2019-08-01 20:45 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2019-08-01 20:45:57 PDT
Joseph Pecoraro
Comment 2 2019-08-01 20:56:00 PDT
Comment on attachment 375389 [details] Patch r=me!
WebKit Commit Bot
Comment 3 2019-08-01 21:30:45 PDT
Comment on attachment 375389 [details] Patch Clearing flags on attachment: 375389 Committed r248147: <https://trac.webkit.org/changeset/248147>
WebKit Commit Bot
Comment 4 2019-08-01 21:30:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-08-01 21:31:14 PDT
Note You need to log in before you can comment on or make changes to this bug.