Fix compilation of PageConsoleClient with !ENABLE(VIDEO) https://bugs.webkit.org/show_bug.cgi?id=200380

Reviewed by Joseph Pecoraro.

* page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::screenshot):


Canonical link: https://commits.webkit.org/214146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248147 268f45cc-cd09-0410-ab3c-d52691b4dbfc